perf/istio-install/istio_telemetry/envoy-filter-cryptomb-stats.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cryptomb-stats
  namespace: istio-system
spec:
  workloadSelector: 
    labels: 
      istio: ingressgateway
  configPatches:
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
        stats_config:
          histogram_bucket_settings:
          - buckets: [2,3,4,5,6,7,8,9]
            match:
              contains: "cryptomb"
